# ai-list-4

./: README.md  main.py  prek.toml  pyproject.toml
.github/workflows/: ci.yml
src/: exploration.py  models.py  preprocessing.py
