[project]
name = "list-4"
version = "0.1.0"
description = "Projekt AI - Klasyfikacja przeżywalności (Cirrhosis)"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "prek>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "NPY", "PD"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
